some examples & validation
